--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
 
 <body>
     <h1>This is my portfolio!</h1>
-
+    <ul id="nav">
+        <li>Portfolio</li>
+        <li>Bio</li>
+        <li>CV</li>
+        <li>Contact</li>
+    </ul>
     <!-- JS -->
     <script src="js/main.js"></script>
 </body>  
